# my-project-template

./: .astylerc  .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  ReadMe.md  doc.sh  dockerfile  doxide.yaml  fmtallfiles.sh  gendocs.sh  mkdocs.yaml  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: cmake.yml  newcmake.yml
include/: dog.h
src/: dog.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
